Zimmerberg OL: Alignment fix

--- a/src/zimmerberg_ol/styles.scss
+++ b/src/zimmerberg_ol/styles.scss
@@ -40,6 +40,11 @@ p {
     width: 250px;
 }
 
+.language-selection {
+    margin-left: auto !important;
+    margin-right: 0;
+}
+
 .lang {
     font-size: 18px;
 }
